# kaspi-parse-product

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  seed.json
alembic/: env.py
alembic/versions/: 810ee4d87216_init_models.py
export/offers/: offers_118366664.json
export/products/: product_118366664.json
logs/: config_logs.py
src/: crud.py  main.py  models.py  schemas.py  utils.py
src/core/: config.py  dependencies.py
src/routers/: __init__.py  api_v1.py  health.py  products.py
src/services/: file_service.py  kaspi_parser.py
