[project]
name = "tzvr"
version = "0.1.0"
description = "Kaspi.kz Product Parser for Marketplace Analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "celery>=5.3.0",
    "redis>=5.1.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-json-logger>=4.0.0",
]
